	 peripheral list.
20040214 specplus3.c: reverse map mapping for 0xc000 - 0xffff was
	 incorrectly always set to 0 in normal_memory_map()
	 (Release-0_6_2-branch).
20040215 Use the new peripheral code to (de)activate the Kempston
	 interface at run-time where appropriate.
20040216 widget/{options.pl,widget.c}: update peripherals list when widget
	 options dialog exited.
20040216 ui/sdl/sdldisplay.c: don't overrun the rectangles array in
	 sdl_blit_icon() (thanks, Simon Tatham) (Release-0_6_2-branch).
20040216 configure.in: use glib 2.0 if available (Release-0_6_2-branch)
	 (Darren).
20040216 configure.in, utils.c: compilation fix if ROMSDIR defined (and
	 configure.in option to define it) (Release-0_6_2-branch)
	 (Darren).
20040217 settings.dat, ui/uijoystick.c: allow selectable joystick devices
	 (Release-0_6_2-branch) (Darren).
20040218 ui/uijoystick.c: open_stick should be open_joystick
	 (Release-0_6_2-branch).
20040219 ChangeLog, README, configure.in, man/fuse.1: documenation etc
	 updates for the 0.6.2.1 release (Release-0_6_2-branch).
20040219 TAG: Release-0_6_2_1 (Release-0_6_2-branch).
20040223 Merge changes from Release-0_6_2_1 to HEAD.
20040223 TAG: Release-0_6_2-merge-1
20040225 z80/{harness.pl,z80.pl,tests/37.in,tests/37.out}: SCF should copy
	 bits 3 and 5 from the A register, not OR them (thanks, Erik Kunze
	 and Thomas Harte).
20040225 z80/test/37*: split the SCF test into 4, rather than one overly
	 complicated test.
20040225 z80/{z80.pl,z80_macros.h,tests/README,tests/*cb*}: BIT
	 instructions should set bits 3 and 5 only for BIT 3,<arg> and BIT
	 5,<arg> respectively.
20040226 debugger/{breakpoint.[ch],Makefile.am,commandy.y,debugger.[ch]},
	 ui/gtk/{debugger.c,pokefinder.c}: stop the evil multiplexing of
	 the 'value' parameter to debugger_breakpoint_add().
20040226 debugger/{breakpoint.[ch], commandy.y}, ui/gtk/debugger.c: allow
	 masks to be applied before checking for port breakpoints.