@@ -597,3 +597,5 @@
 	 the 'value' parameter to debugger_breakpoint_add().
 20040226 debugger/{breakpoint.[ch], commandy.y}, ui/gtk/debugger.c: allow
 	 masks to be applied before checking for port breakpoints.
+20040227 event.c,ui.[ch]: don't display an error message if the same
+	 message was displayed within the past second.
